day7/apps/dotnetcore/manifests/scmresourcesapi/scm-resources-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scm-resources-deploy
  labels:
    application: scmcontacts
    service: scmresourcesapi
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      application: scmcontacts
      service: scmresourcesapi
  template:
    metadata:
      labels:
        application: scmcontacts
        service: scmresourcesapi
    spec:
      automountServiceAccountToken: false
      containers:
        - name: application
          resources:
            requests:
              memory: '64Mi'
              cpu: '100m'
            limits:
              memory: '256Mi'
              cpu: '500m'
          image: azuredevcollege.azurecr.io/adcd7/scmresourceapi
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5000
