day7/apps/dotnetcore/manifests/scmresourcesapi/scm-resources-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: resources 
  labels:
    application: scmcontacts
    service: scmresourcesapi
spec:
  type: ClusterIP
  selector:
    application: scmcontacts
    service: scmresourcesapi
  ports:
  - port: 8080
    targetPort: 5000
